include_directories(${Shop_SOURCE_DIR}/include)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${Shop_SOURCE_DIR}/bin)
# Libs
add_subdirectory(cart)
add_subdirectory(database)
add_subdirectory(sale)
add_subdirectory(controller)
add_subdirectory(view)
add_executable(Shop main.cpp)
target_link_libraries(Shop Controller Sale Cart Database)
